--- a/src/styles/queries/queries.scss
+++ b/src/styles/queries/queries.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .room-card {
+    max-width: 80%;
+  }
 }
 
 @media (max-width: 89em) {
@@ -10,6 +14,10 @@
     flex-direction: column;
     align-items: center;
     gap: 4.4rem;
+  }
+
+  .customer-card-wrapper .customer-card {
+    max-width: 85%;
   }
 
   .footer .main-part {
