--- a/src/styles/rooms/rooms.scss
+++ b/src/styles/rooms/rooms.scss
@@ -30,7 +30,7 @@
     text-align: center;
 
     .rooms-btn {
-      width: 28rem;
+      width: 24rem;
       padding: 1.6rem 1rem;
       margin: 4.4rem 0;
       background-color: transparent;
@@ -51,7 +51,7 @@
 }
 
 .room-card {
-  max-width: 70%;
+  max-width: 60rem;
   margin: 5rem;
   background-color: var(--false-grey);
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.1);
